syntax = "proto3";

option csharp_namespace = "GrpcServer";

package humans;

service Humans {
	rpc GetEmployeeById (GetEmployeeByIdRequest) returns (GetEmployeeByIdReply);
}

message GetEmployeeByIdRequest {
	string _id = 1;
}

message GetEmployeeByIdReply{
	Employee employee = 1;
}

message Employee {
	string _id = 1;
	Person person = 2;
	repeated Role roles = 3;
}

enum Role {
	ROLE_EMPLOYEE = 0;
	ROLE_ADMINISTRATOR = 1;
	ROLE_IT_DEPARTMENT = 2;
}

message Person {
	string firstName = 1;
	string lastName = 2;
	string address = 3;
	string postalCode = 4;
	string emailAddress = 5;
	string BirthDate = 6;
	Gender gender = 7;
}

enum Gender {
	GENDER_MALE = 0;
	GENDER_FEMALE = 1;
	GENDER_OTHER = 2;
}


